src/test/ui/span/range-2.ds
// Test range syntax - borrow errors.
#![feature(dustc_attrs)]
pub fn main() { #![dustc_error] // dust-lang/dust#49855
    let r = {
        let a = 42;
        let b = 42;
        &a..&b
    };
    //~^^ ERROR `a` does not live long enough
    //~| ERROR `b` does not live long enough
    r.use_ref();
}

trait Fake { fn use_mut(&mut self) { } fn use_ref(&self) { }  }
impl<T> Fake for T { }
